# paper_searcher

./: .flake8  .gitignore  README.md  app.py  layout_config.yml  main.py  pyproject.toml
assets/css/: style.css
docs/: design_collector.md  design_dashboard.md  design_extractor.md  design_screener.md  outline.md
docs/design/: screener.md
docs/manuals/: operations.md  testing.md
docs/reference/: data_dictionary.md
docs/testing/: integration_test_cases.md  integration_test_evidence.md  integration_test_plan.md  integration_test_report.md
prompts/: extraction.txt  screening.txt
src/: collector.py  extractor.py  io_utils.py  logging_config.py  screener.py  utils.py
src/core/: collector.py  extractor.py  screener.py
src/models/: models.py
src/utils/: constants.py  io_utils.py  logging_config.py
tests/: test_collector.py  test_models.py  test_screener.py  test_simple_api.py  test_utils.py
